[tool.poetry]
name = "advent of code"
version = "0.1.0"
description = "Advent of Code solutions"
authors = ["MrDWilson"]
readme = "README.md"
packages = [
    { include = "1", from = "1" },
    { include = "2", from = "2" },
    { include = "3", from = "3" },
    { include = "4", from = "4" },
    { include = "5", from = "5" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"

[tool.poetry.scripts]
1 = "1.1:main"
2 = "2.2:main"
3 = "3.3:main"
4 = "4.4:main"
5 = "5.5:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
