[tool.poetry]
name = "advent of code"
version = "0.1.0"
description = "Advent of Code solutions"
authors = ["MrDWilson"]
readme = "README.md"
packages = [
    { include = "1", from = "1" },
    { include = "2", from = "2" },
    { include = "3", from = "3" },
    { include = "4", from = "4" },
    { include = "5", from = "5" },
    { include = "6", from = "6" },
    { include = "7", from = "7" },
    { include = "8", from = "8" },
    { include = "9", from = "9" },
    { include = "10", from = "10" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"

[tool.poetry.scripts]
1 = "1.1:main"
2 = "2.2:main"
3 = "3.3:main"
4 = "4.4:main"
5 = "5.5:main"
6 = "6.6:main"
7 = "7.7:main"
8 = "8.8:main"
9 = "9.9:main"
10 = "10.10:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
